Squash all* of the bugs (*not actually all)

--- a/Capstone/wwwroot/css/Decks/ViewDeck.css
+++ b/Capstone/wwwroot/css/Decks/ViewDeck.css
@@ -72,6 +72,8 @@ div.card {
 div.card-info {
     overflow-y: scroll;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 div.card-info::-webkit-scrollbar {
@@ -98,10 +100,8 @@ div.card p.back {
     margin: auto;
 }
 
-div.card img {
-    max-width: 100%;
-    max-height: 100%;
-    padding: 15px;
+div.card-info img {
+    height: calc(18vh - 25px);
 }
 
 div.buttons {
@@ -109,10 +109,7 @@ div.buttons {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    /*background-color: rgba(255,255,255,0.7);
-    border-radius: 6px;*/
 }
-
 
 .hidden {
     display: none;
